test/errhandling/parallel/begin-calls-throwing-fn.good
begin-calls-throwing-fn.chpl:10: In function 'badFn':
begin-calls-throwing-fn.chpl:12: error: call to throwing function throwingFn without throws, try, or try! (relaxed mode)
begin-calls-throwing-fn.chpl:6: note: throwing function throwingFn defined here
